--- a/src/index.html
+++ b/src/index.html
@@ -16,6 +16,7 @@
     />
 
     <main>
+      <load src="./partials/burger-menu.html" />
       <load src="./partials/hero.html" />
       <load src="./partials/rating.html" />
       <load src="./partials/filters.html" />
@@ -25,5 +26,6 @@
     <load src="./partials/footer.html" />
 
     <script type="module" src="./js/main.js"></script>
+    <script type="module" src="./js/burger-menu.js"></script>
   </body>
 </html>
