--- a/src/index.html
+++ b/src/index.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+<!doctype html>
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
@@ -20,6 +20,9 @@
       <load src="./partials/rating.html" />
       <load src="./partials/filters.html" />
       <load src="./partials/up-btn.html" />
+
+      <load src="./partials/exercise-modal.html" />
+      <load src="./partials/rating-modal.html" />
     </main>
 
     <load src="./partials/footer.html" />
