--- a/src/index.html
+++ b/src/index.html
@@ -19,6 +19,7 @@
       <load src="./partials/hero.html" />
       <load src="./partials/rating.html" />
       <load src="./partials/filters.html" />
+      <load src="./partials/categories.html" />
       <load src="./partials/exercises.html" />
       <load src="./partials/up-btn.html" />
 
