--- a/src/index.html
+++ b/src/index.html
@@ -16,11 +16,9 @@
     />
 
     <main>
-      <load src="./partials/burger-menu.html" />
       <load src="./partials/hero.html" />
-      <load src="./partials/categories.html" />
-      <load src="./partials/exercises.html" />
       <load src="./partials/rating.html" />
+      <load src="./partials/filters.html" />
       <load src="./partials/up-btn.html" />
 
       <load src="./partials/exercise-modal.html" />
@@ -30,6 +28,5 @@
     <load src="./partials/footer.html" />
 
     <script type="module" src="./js/main.js"></script>
-    <script type="module" src="./js/burger-menu.js"></script>
   </body>
 </html>
