--- a/src/index.html
+++ b/src/index.html
@@ -1,35 +1,34 @@
 <!doctype html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/favicon.svg" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Home</title>
 
-    <link rel="stylesheet" href="./css/styles.css" />
-  </head>
-  <body>
-    <load
-      src="./partials/header.html"
-      home_active="active"
-      favorites_active=""
-    />
+<head>
+  <meta charset="UTF-8" />
+  <link rel="icon" type="image/svg+xml" href="/favicon.svg" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>Home</title>
 
-    <main>
-      <load src="./partials/burger-menu.html" />
-      <load src="./partials/hero.html" />
-      <load src="./partials/categories.html" />
-      <load src="./partials/exercises.html" />
-      <load src="./partials/rating.html" />
-      <load src="./partials/up-btn.html" />
+  <link rel="stylesheet" href="./css/styles.css" />
+</head>
 
-      <load src="./partials/exercise-modal.html" />
-      <load src="./partials/rating-modal.html" />
-    </main>
+<body>
+  <load src="./partials/header.html" home_active="active" favorites_active="" />
 
-    <load src="./partials/footer.html" />
+  <main>
+    <load src="./partials/burger-menu.html" />
+    <load src="./partials/hero.html" />
+    <load src="./partials/categories.html" />
+    <load src="./partials/exercises.html" />
+    <load src="./partials/rating.html" />
+    <load src="./partials/up-btn.html" />
 
-    <script type="module" src="./js/main.js"></script>
-    <script type="module" src="./js/burger-menu.js"></script>
-  </body>
+    <load src="./partials/exercise-modal.html" />
+    <load src="./partials/rating-modal.html" />
+  </main>
+
+  <load src="./partials/footer.html" />
+
+  <script type="module" src="./js/main.js"></script>
+  <script type="module" src="./js/burger-menu.js"></script>
+</body>
+
 </html>
