--- a/src/favorites.html
+++ b/src/favorites.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <link rel="icon" type="image/svg+xml" href="/favicon.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Favorites</title>
+    <title>Home</title>
 
     <link rel="stylesheet" href="./css/styles.css" />
   </head>
@@ -16,8 +16,11 @@
     />
 
     <main>
-      <load src="./partials/burger-menu.html" />
-      <load src="./partials/favorites.html" />
+      <load src="./partials/hero.html" />
+      <load src="./partials/rating.html" />
+      <load src="./partials/up-btn.html" />
+
+      <load src="./partials/exercise-modal.html" />
       <load src="./partials/rating-modal.html" />
     </main>
 
