--- a/src/favorites.html
+++ b/src/favorites.html
@@ -18,6 +18,7 @@
     <main>
       <load src="./partials/burger-menu.html" />
       <load src="./partials/favorites.html" />
+      <load src="./partials/exercise-modal.html" />
       <load src="./partials/rating-modal.html" />
     </main>
 
